--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/supabase": "^1.2.0",
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "@pinia/nuxt": "^0.5.1",
+    "@prisma/client": "^5.11.0",
+    "@vite-pwa/nuxt": "^0.6.0",
     "nuxt": "^3.11.1",
+    "nuxt-icon": "^0.6.10",
+    "pinia": "^2.1.7",
+    "prisma": "^5.11.0",
+    "uuid": "^9.0.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   }
